# central-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build-db-models.sh  build-musl.sh  build-schema.sh  build.rs  db-migrate.py  generate-qdbs.sh
.github/workflows/: build.yml
schema/: main.capnp  main.fbs
src/: main.rs
src/analytics/: config.rs  mod.rs  models.rs
src/analytics/migrations/: 0001_initial.sql  0002_add_platform_desc.sql  mod.rs
src/auth/: account_data.rs  argon_client.rs  config.rs  mod.rs  token_issuer.rs
src/core/: client_data.rs  constants.rs  event_worker.rs  gd_api.rs  handler.rs  mod.rs  module.rs
src/core/config/: core.rs  mod.rs
src/core/data/: mod.rs
src/core/game_server/: data.rs  handler.rs  manager.rs  mod.rs
src/core/handler/: admin.rs  client_store.rs  featured.rs  login.rs  message_handling.rs  misc.rs  mod.rs  rooms.rs  session.rs  util.rs
src/credits/: config.rs  mod.rs
src/discord/: bot.rs  event_handler.rs  message.rs  mod.rs  oauth_failure.html  oauth_success.html  state.rs
src/discord/commands/: features.rs  link.rs  maintenance.rs  misc.rs  mod.rs  moderation.rs  util.rs
src/features/: config.rs  mod.rs  sheets_client.rs
src/features/database/: mod.rs
src/features/database/entities/: blacklisted_feature_author.rs  featured_level.rs  mod.rs  prelude.rs  queued_level.rs  sent_level.rs
src/features/database/migration/: Cargo.toml  m20250928_144510_add_featured.rs  m20251010_160043_add_blacklisted.rs  m20260403_222137_make_queued_sane.rs  mod.rs
src/features/database/migration/src/: lib.rs  main.rs
src/rooms/: invite_token.rs  manager.rs  mod.rs  room.rs  session_id.rs  settings.rs
src/users/: config.rs  mod.rs  pwhash.rs
src/users/database/: log_action.rs  mod.rs
src/users/database/entities/: audit_log.rs  blacklisted_author.rs  blacklisted_level.rs  mod.rs  player_count_log.rs  prelude.rs  punishment.rs  uident.rs  user.rs
src/users/database/migration/: Cargo.toml  m20250829_161555_add_uident.rs  m20250910_214142_add_discord_id.rs  m20251102_125351_add_blacklisted_levels.rs  mod.rs
src/users/database/migration/src/: lib.rs  m20250802_000001_initial.rs  m20260326_172649_add_player_counts.rs  m20260509_135918_add_uident_whitelist.rs
src/users/database/migrations/: m20250802_000001_initial.rs  mod.rs
src/web/: config.rs  mod.rs
src/word_filter/: filter.rs  mod.rs  word_iterator.rs
