[package]
name = "central-server"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
sea-orm-migration = { version = "1.1.14" }
base64 = "0.22.1"
blake3 = "1.8.2"
capnp = { version = "0.21.2", default-features = false, features = [
    "unaligned",
    "std",
] }
dashmap = { version = "6.1.0", features = ["inline"] }
futures-util = "0.3.31"
heapless = "0.8.0"
hex = "0.4.3"
parking_lot = { version = "0.12.4", features = ["send_guard"] }
rand = "0.9.1"
server-shared = { git = "https://github.com/GlobedGD/server-shared", rev = "55a636d", features = [
    "main",
    "srvc",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
slab = "0.4.10"
state = "0.6.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = [
    "rustls-tls-native-roots",
] }
toml = "0.9.2"
tracing = "0.1.41"
arc-swap = "1.7.1"
rustc-hash = "2.1.1"
sea-orm = { version = "1.1.14", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
rustls = { version = "0.23.31", features = ["ring"] }
itertools = "0.14.0"
bcrypt = "0.17.0"
smallvec = "1.15.1"
nohash-hasher = "0.2.0"
poise = { version = "0.6.1", optional = true }
generic-async-http-client = { version = "0.7.0", features = [
    "rustls_ring",
    "use_hyper",
    "http2",
] }
crypto_secretbox = { version = "0.1.1", features = ["heapless"] }
google-sheets4 = { version = "6.0.0", optional = true }
time-format = "1.2.2"
anyhow = "1.0.100"
build-time = "0.1.3"
metrics-process = "2.4.2"
aho-corasick = { version = "1.1.4", optional = true }
async-watcher = { version = "0.3.0", optional = true }
mimalloc = { version = "0.1.48", optional = true }
validator = { version = "0.20.0", features = ["derive"] }

[features]
all = ["discord", "quic", "featured-levels", "word-filter"]
docker-build = ["all"]
docker-alpine-build = ["all", "mimalloc"]

word-filter = ["dep:aho-corasick", "dep:async-watcher"]
featured-levels = ["dep:google-sheets4"]
default = []
discord = ["dep:poise"]
quic = ["server-shared/quic"]
mimalloc = ["dep:mimalloc"]
