[package]
name = "central-server"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "thin"
codegen-units = 1

[dependencies]
sea-orm-migration = { version = "1.1.19" }
base64 = "0.22.1"
blake3 = "1.8.3"
dashmap = { version = "6.1.0", features = ["inline"] }
futures-util = "0.3.32"
heapless = { version = "0.9.2", features = ["serde"] }
hex = "0.4.3"
parking_lot = { version = "0.12.5", features = ["send_guard"] }
rand = "0.10.0"
server-shared = { git = "https://github.com/GlobedGD/server-shared", rev = "914cbc0", features = [
    "main",
    "srvc",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slab = "0.4.12"
state = "0.6.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-native-roots",
] }
toml = "1.0.3"
tracing = "0.1.44"
arc-swap = "1.8.2"
rustc-hash = "2.1.1"
sea-orm = { version = "1.1.19", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
rustls = { version = "0.23.37", features = ["ring"] }
itertools = "0.14.0"
bcrypt = "0.18.0"
smallvec = "1.15.1"
nohash-hasher = "0.2.0"
poise = { version = "0.6.1", optional = true }
generic-async-http-client = { version = "0.7.0", features = [
    "rustls_ring",
    "use_hyper",
    "http2",
] }
crypto_secretbox = { version = "0.1.1", features = ["heapless"] }
google-sheets4 = { version = "7.0.0", optional = true, default-features = false, features = [
    "yup-oauth2",
] }
yup-oauth2 = { version = "12", features = ["hyper-rustls", "aws-lc-rs"] }
time-format = "1.2.2"
anyhow = "1.0.102"
build-time = "0.1.3"
metrics-process = "2.4.3"
aho-corasick = { version = "1.1.4", optional = true }
async-watcher = { version = "0.4.0", optional = true }
mimalloc = { version = "0.1.48", optional = true }
validator = { version = "0.20.0", features = ["derive"] }

# Analytics
clickhouse = { version = "0.14.2", features = [
    "rustls-tls",
    "rustls-tls-ring",
    "rustls-tls-native-roots",
    "chrono",
], optional = true }
include_dir = { version = "0.7.4", optional = true }
chrono = { version = "0.4.44", optional = true }

[features]
all = ["discord", "quic", "featured-levels", "word-filter", "analytics"]
docker-build = ["all"]
docker-alpine-build = ["all", "mimalloc"]

word-filter = ["dep:aho-corasick", "dep:async-watcher"]
featured-levels = ["dep:google-sheets4"]
default = []
discord = ["dep:poise"]
quic = ["server-shared/quic"]
mimalloc = ["dep:mimalloc"]
analytics = ["dep:clickhouse", "dep:include_dir", "dep:chrono"]
