[workspace]
members = [
    ".",
    "src/users/database/migration",
    "src/features/database/migration",
]

[package]
name = "central-server"
version = "1.0.0"
edition = "2024"

[profile.release]
lto = "thin"
codegen-units = 1
# debug = true

[dependencies]
users_migration = { path = "src/users/database/migration" }
features_migration = { path = "src/features/database/migration" }

sea-orm-migration = { version = "2.0.0-rc.40" }
base64 = "0.22.1"
blake3 = "1.8.5"
dashmap = { version = "6.2.1", features = ["inline", "raw-api"] }
futures-util = "0.3.32"
heapless = { version = "0.9.3", features = ["serde"] }
hex = "0.4.3"
parking_lot = { version = "0.12.5", features = ["send_guard"] }
rand = "0.10.1"
server-shared = { git = "https://github.com/GlobedGD/server-shared", rev = "5bf8563", features = [
    "main",
    "srvc",
    "dyn-encoding",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
slab = "0.4.12"
state = "0.6.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = [
    "rustls-tls-native-roots",
] }
toml = "1.1.2"
tracing = "0.1.44"
arc-swap = "1.9.1"
rustc-hash = "2.1.2"
sea-orm = { version = "2.0.0-rc.40", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
rustls = { version = "0.23.40", features = ["ring"] }
itertools = "0.14.0"
bcrypt = "0.19.1"
smallvec = "1.15.1"
nohash-hasher = "0.2.0"
poise = { version = "0.6.2", optional = true }
plotters = { version = "0.3", optional = true, default-features = false, features = [
    "bitmap_backend",
    "ab_glyph",
    "all_series",
] }
crypto_secretbox = { version = "0.1.1", features = ["heapless"] }
google-sheets4 = { version = "7.0.0", optional = true, default-features = false, features = [
    "yup-oauth2",
] }
yup-oauth2 = { version = "12", features = ["hyper-rustls", "aws-lc-rs"] }
time-format = "1.2.2"
anyhow = "1.0.102"
build-time = "0.1.3"
metrics-process = "2.4.3"
aho-corasick = { version = "1.1.4", optional = true }
async-watcher = { version = "0.4.0", optional = true }
mimalloc = { version = "0.1.52", optional = true }
fuzzy-matcher = { version = "0.3.7", optional = true }
validator = { version = "0.20.0", features = ["derive"] }

# Analytics
clickhouse = { version = "0.15.1", features = [
    "rustls-tls",
    "rustls-tls-ring",
    "rustls-tls-native-roots",
    "chrono",
], optional = true }
include_dir = { version = "0.7.4", optional = true }
chrono = { version = "0.4.45", optional = true }
axum = { version = "0.8.9", optional = true }
tower-http = { version = "0.6.11", features = ["cors"] }
image = { version = "0.25.10", optional = true }
reqwest = { version = "0.13.4", default-features = false, features = [
    "http2",
    "json",
    "rustls",
    "form",
] }
urlencoding = { version = "2.1.3", optional = true }

[features]
all = [
    "discord",
    "quic",
    "websocket",
    "featured-levels",
    "word-filter",
    "analytics",
    "web",
]
docker-build = ["all"]
docker-alpine-build = ["all", "mimalloc"]

word-filter = ["dep:aho-corasick", "dep:async-watcher"]
featured-levels = ["dep:google-sheets4"]
default = []
discord = ["dep:poise", "dep:plotters", "dep:image", "dep:fuzzy-matcher"]
quic = ["server-shared/quic"]
websocket = ["server-shared/websocket"]
mimalloc = ["dep:mimalloc"]
analytics = ["dep:clickhouse", "dep:include_dir", "dep:chrono"]
web = ["dep:axum", "dep:urlencoding"]
